@@ -13,6 +13,15 @@
 
 -------------------------------------------------------------------------------
 
+	2005-05-21
+
+	* Efficiency: The SQLite adaptor now creates new databases with an
+	  additional index, to reduce CPU time for lookups.
+	  You can add the same index to existing databases by typing:
+
+	  sqlite3 ~/.bogofilter/wordlist.db \
+	    'CREATE INDEX bfidx ON bogofilter(key,value);'
+
 	2005-05-19
 
 	* Efficiency: The SQLite adaptor now precompiles the common SQL
